--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<html>
+  <head>
+    <title>Biodata saya</title>
+  </head>
 
+  <body>
+    <center>
+
+      <table width="75%" border="2">
+        <tr>
+          <th width="20%"><img src="images/profile_header.jpg" width="100%" ></th>
+          <th><font size="50">Biodata saya</font></th>
+        </tr>
+      </table>
