--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
       <table width="75%" border="2">
         <tr>
-          <th width="20%"><img src="images/profile_header.jpg" width="100%" ></th>
+          <th width="20%"><img src="images/profil_header.jpg" width="100%" ></th>
           <th><font size="50">Biodata saya</font></th>
         </tr>
       </table>
