--- a/index.html
+++ b/index.html
@@ -12,3 +12,12 @@
           <th><font size="50">Biodata saya</font></th>
         </tr>
       </table>
+      
+      <table width="80%" border="3">
+            <tr>
+                <td><h4><a href="index.html">UTAMA</a></h4></td>
+                <td><h4><a href="#">TENTANG SAYA</a></h4></td>
+                <td><h4><a href="#">HOBI SAYA</a></h4></td>
+                <td><h4><a href="#">HUBUNGI SAYA</a></h4></td>
+            </tr>
+        </table>
