--- a/index.html
+++ b/index.html
@@ -21,3 +21,30 @@
                 <td><h4><a href="#">HUBUNGI SAYA</a></h4></td>
             </tr>
         </table>
+       <br>
+        <table width="80%" border="1">
+            <tr>
+                <td align="center">
+                     <br><br>
+                    <form action="">
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                        <br><br>
+                        <input type="submit" value="Hantar">
+                        &nbsp;
+                        <input type="reset" value="Reset">
+                    </form>
+                </td>
+            </tr>
+        </table>
+
+        <br>
+
+        <table width="80%" border="3">
+            <tr>
+                <td align="center">
+             </td>
+            </tr>
+        </table>
+    </center>
+    </body>
+</html>
